ref(neo21): make error better when invalid item is provided